# Rag-chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.separate.yml  docker-compose.single.yml  pyproject.toml  render.yaml  run.py
app/: config.py  main.py
app/api/routes/: chat.py  files.py  pages.py  settings.py
app/core/: security.py
app/db/: models.py  session.py
app/schemas/: chat.py  chats.py  files.py  settings.py
app/services/: document_parser.py  document_service.py  llm_service.py  rag_service.py  repositories.py  settings_service.py  text_chunker.py  vector_store.py
app/static/css/: styles.css
app/static/js/: chat.js  data_management.js  settings.js
app/templates/: base.html  chat.html  data_management.html  settings.html
diagrams/: architecture.puml
docs/: deploy-separate-containers.md  deploy-single-container.md  functionality.md  setup-and-run.md  tech-stack.md
rag_core/: __init__.py  config.py  document_parser.py  document_service.py  llm_service.py  rag_service.py  repositories.py  security.py  settings_service.py  settings_store.py  text_chunker.py  vector_store.py
rag_core/db/: __init__.py  models.py  session.py
rag_core/storage/: __init__.py  base.py  local.py  supabase.py
supportive_files/diagrams/: architecture.puml  sequence-chat-streaming.puml
supportive_files/docs/: deploy-separate-containers.md  deploy-single-container.md  functionality.md  setup-and-run.md  tech-stack.md
